# agorapp-solana

./: .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
dev-editor/: next.config.js  package.json  tsconfig.json
dev-editor/src/pages/: _app.tsx  _document.tsx  index.tsx
dev-editor/src/pages/api/runner/: action.ts  solve.ts
dev-editor/src/pages/api/tutorial/[courseSlug]/: index.ts
dev-editor/src/pages/course/[chain]/[language]/[courseSlug]/[[...lessonSlug]]/: index.tsx
dev-editor/src/styles/: global.styled.ts
dev-editor/src/utils/: getRunnerUrl.ts
lessons-code/solana-cpi/: Cargo.toml
lessons-code/solana-cpi/tests/: lesson_tests.rs
lessons-code/solana-sysvar/: Cargo.toml
lessons-code/solana-sysvar/tests/: lesson_tests.rs
lessons-code/solana-transfer-lamports/tests/: lesson_tests.rs
src/: lesson.rs  main.rs
