[package]
name = "agorapp-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.0.0"
lazy_static = "1.4.0"
anyhow = "1.0.80"
dirs = "5.0.1"
regex = "1.10.3"
fs_extra = "1.3.0"
